@@ -1439,7 +1439,7 @@ sub prep_tpl {
 sub lock_system {
     push_el(\@main::el, 'lock_system()', 'Starting...');
 
-    my $res = open(my $fh, '>', $main::lock_file);
+    my $res = open(my $fh, '<', $main::lock_file);
     if (!$res) { 
         push_el(\@main::el, 'lock_system()', 'ERROR: unable to open lock file!');
         return -1;
@@ -1452,18 +1452,6 @@ sub lock_system {
         return -1;
     }
     
-    push_el(\@main::el, 'lock_system()', 'Ending...');
-    return 0;
-}
-
-sub unlock_system {
-    push_el(\@main::el, 'unlock_system()', 'Starting...');
-
-    my $res = unlink($main::lock_file);
-    if (!$res) {
-        push_el(\@main::el, 'lock_system()', 'ERROR: unable to delete global lock file!');
-    }
-
     push_el(\@main::el, 'lock_system()', 'Ending...');
     return 0;
 }
