@@ -216,7 +216,6 @@ function add_domain_alias(&$sql, &$err_al) {
 
 	// Begin add new alias domain
 	$alias_name = htmlspecialchars($alias_name, ENT_QUOTES, "UTF-8");
-	check_for_lock_file();
 
 	$status = Config::get('ITEM_ORDERED_STATUS');
 
