@@ -596,7 +596,6 @@ function check_fwd_data(&$tpl, $edit_id) {
 			exec_query($sql, $query, array(Config::get('ITEM_CHANGE_STATUS'), Config::get('ITEM_CHANGE_STATUS'), $dmn_id, $alias_id));
 		}
 
-		check_for_lock_file();
 		send_request();
 
 		$admin_login = $_SESSION['user_logged'];
