@@ -56,7 +56,6 @@ check_email_user($sql);
 if (isset($_GET['id']) && $_GET['id'] !== '') {
 	$mail_id = $_GET['id'];
 	$item_change_status = Config::get('ITEM_CHANGE_STATUS');
-	check_for_lock_file();
 
 	$query = "
 		UPDATE
